feat: 启动脚本