@@ -1,158 +1,63 @@
 #!/bin/bash
-SERVICE_NAME=apollo-adminservice
-## Adjust log dir if necessary
-LOG_DIR=/opt/logs/100003172
-## Adjust server port if necessary
-SERVER_PORT=${SERVER_PORT:=8090}
 
-## Create log directory if not existed because JDK 8+ won't do that
-mkdir -p $LOG_DIR
-
-## Adjust memory settings if necessary
-#export JAVA_OPTS="-Xms2560m -Xmx2560m -Xss256k -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=384m -XX:NewSize=1536m -XX:MaxNewSize=1536m -XX:SurvivorRatio=8"
-
-## Only uncomment the following when you are using server jvm
-#export JAVA_OPTS="$JAVA_OPTS -server -XX:-ReduceInitialCardMarks"
-
-########### The following is the same for configservice, adminservice, portal ###########
-export JAVA_OPTS="$JAVA_OPTS -XX:ParallelGCThreads=4 -XX:MaxTenuringThreshold=9 -XX:+DisableExplicitGC -XX:+ScavengeBeforeFullGC -XX:SoftRefLRUPolicyMSPerMB=0 -XX:+ExplicitGCInvokesConcurrent -XX:+HeapDumpOnOutOfMemoryError -XX:-OmitStackTraceInFastThrow -Duser.timezone=Asia/Shanghai -Dclient.encoding.override=UTF-8 -Dfile.encoding=UTF-8 -Djava.security.egd=file:/dev/./urandom"
-# DataSource URL USERNAME PASSWORD
-if [ "$DS_URL"x != x ]
-then
-    export JAVA_OPTS="$JAVA_OPTS -Dspring.datasource.url=$DS_URL -Dspring.datasource.username=$DS_USERNAME -Dspring.datasource.password=$DS_PASSWORD"
-fi
-export JAVA_OPTS="$JAVA_OPTS -Dserver.port=$SERVER_PORT -Dlogging.file=$LOG_DIR/$SERVICE_NAME.log -XX:HeapDumpPath=$LOG_DIR/HeapDumpOnOutOfMemoryError/"
-
-PATH_TO_JAR=$SERVICE_NAME".jar"
-SERVER_URL="http://localhost:$SERVER_PORT"
-
-function checkPidAlive {
-    for i in `ls -t $SERVICE_NAME*.pid 2>/dev/null`
-    do
-        read pid < $i
-
-        result=$(ps -p "$pid")
-        if [ "$?" -eq 0 ]; then
-            return 0
-        else
-            printf "\npid - $pid just quit unexpectedly, please check logs under $LOG_DIR and /tmp for more information!\n"
-            exit 1;
-        fi
-    done
-
-    printf "\nNo pid file found, startup may failed. Please check logs under $LOG_DIR and /tmp for more information!\n"
-    exit 1;
+error_exit ()
+{
+    echo "ERROR: $1 !!"
+    exit 1
 }
 
-if [ "$(uname)" == "Darwin" ]; then
-    windows="0"
-elif [ "$(expr substr $(uname -s) 1 5)" == "Linux" ]; then
-    windows="0"
-elif [ "$(expr substr $(uname -s) 1 5)" == "MINGW" ]; then
-    windows="1"
-else
-    windows="0"
-fi
+JAVA_HOME="/home/tax/jdk1.8.0_191"
+export JAVA_HOME
+export PATH=$PATH:JAVA_HOME/bin
+echo JAVA_HOME:${JAVA_HOME}
+${JAVA_HOME}/bin/java -version
 
-# for Windows
-if [ "$windows" == "1" ] && [[ -n "$JAVA_HOME" ]] && [[ -x "$JAVA_HOME/bin/java" ]]; then
-    tmp_java_home=`cygpath -sw "$JAVA_HOME"`
-    export JAVA_HOME=`cygpath -u $tmp_java_home`
-    echo "Windows new JAVA_HOME is: $JAVA_HOME"
-fi
+export JAVA="$JAVA_HOME/bin/java"
+export BASE_DIR=`cd $(dirname $0)/..; pwd`
+export DEFAULT_SEARCH_LOCATIONS="classpath:/,classpath:/config/,file:./,file:./config/"
+export CUSTOM_SEARCH_LOCATIONS=file:${BASE_DIR}/config/
 
-# Find Java
-if [[ -n "$JAVA_HOME" ]] && [[ -x "$JAVA_HOME/bin/java" ]]; then
-    javaexe="$JAVA_HOME/bin/java"
-elif type -p java > /dev/null 2>&1; then
-    javaexe=$(type -p java)
-elif [[ -x "/usr/bin/java" ]];  then
-    javaexe="/usr/bin/java"
-else
-    echo "Unable to find Java"
-    exit 1
-fi
-
-if [[ "$javaexe" ]]; then
-    version=$("$javaexe" -version 2>&1 | awk -F '"' '/version/ {print $2}')
-    version=$(echo "$version" | awk -F. '{printf("%03d%03d",$1,$2);}')
-    # now version is of format 009003 (9.3.x)
-    if [ $version -ge 011000 ]; then
-        JAVA_OPTS="$JAVA_OPTS -Xlog:gc*:$LOG_DIR/gc.log:time,level,tags -Xlog:safepoint -Xlog:gc+heap=trace"
-    elif [ $version -ge 010000 ]; then
-        JAVA_OPTS="$JAVA_OPTS -Xlog:gc*:$LOG_DIR/gc.log:time,level,tags -Xlog:safepoint -Xlog:gc+heap=trace"
-    elif [ $version -ge 009000 ]; then
-        JAVA_OPTS="$JAVA_OPTS -Xlog:gc*:$LOG_DIR/gc.log:time,level,tags -Xlog:safepoint -Xlog:gc+heap=trace"
-    else
-        JAVA_OPTS="$JAVA_OPTS -XX:+UseParNewGC"
-        JAVA_OPTS="$JAVA_OPTS -Xloggc:$LOG_DIR/gc.log -XX:+PrintGCDetails"
-        JAVA_OPTS="$JAVA_OPTS -XX:+UseConcMarkSweepGC -XX:+UseCMSCompactAtFullCollection -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=60 -XX:+CMSClassUnloadingEnabled -XX:+CMSParallelRemarkEnabled -XX:CMSFullGCsBeforeCompaction=9 -XX:+CMSClassUnloadingEnabled  -XX:+PrintGCDateStamps -XX:+PrintGCApplicationConcurrentTime -XX:+PrintHeapAtGC -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=5M"
-    fi
-fi
-
-cd `dirname $0`/..
-
-for i in `ls $SERVICE_NAME-*.jar 2>/dev/null`
+export MODE=""
+while getopts ":m:" opt
 do
-    if [[ ! $i == *"-sources.jar" ]]
-    then
-        PATH_TO_JAR=$i
-        break
-    fi
+    case $opt in
+        m)
+        MODE=$OPTARG
+        ;;
+        ?)
+        echo "Unknown parameter"
+        exit 1;;
+    esac
 done
 
-if [[ ! -f PATH_TO_JAR && -d current ]]; then
-    cd current
-    for i in `ls $SERVICE_NAME-*.jar 2>/dev/null`
-    do
-        if [[ ! $i == *"-sources.jar" ]]
-        then
-            PATH_TO_JAR=$i
-            break
-        fi
-    done
+if [[ "${MODE}" == "debug" ]]; then
+    JAVA_OPT="%JAVA_OPT% -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n "
+fi
+if [[ "${MODE}" == "jmx" ]]; then
+    JAVA_OPT="%JAVA_OPT%  -Dcom.sun.management.jmxremote.port=1099 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false "
 fi
 
-if [[ -f $SERVICE_NAME".jar" ]]; then
-  rm -rf $SERVICE_NAME".jar"
+#===========================================================================================
+# JVM Configuration
+#===========================================================================================
+JAVA_OPT="${JAVA_OPT} -server -Xms512m -Xmx512m -Xmn256m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=320m"
+JAVA_OPT="${JAVA_OPT} -XX:AutoBoxCacheMax=20000 -XX:+AlwaysPreTouch -XX:MaxTenuringThreshold=6 -XX:+ExplicitGCInvokesConcurrent -XX:NewRatio=1"
+
+JAVA_OPT="${JAVA_OPT} -XX:-OmitStackTraceInFastThrow -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${BASE_DIR}/logs/java_heapdump.hprof"
+JAVA_OPT="${JAVA_OPT} -XX:-UseLargePages"
+
+JAVA_OPT="${JAVA_OPT} -Djava.ext.dirs=${JAVA_HOME}/jre/lib/ext:${JAVA_HOME}/lib/ext:${BASE_DIR}/lib"
+JAVA_OPT="${JAVA_OPT} -Xloggc:${BASE_DIR}/logs/gc.log -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M"
+
+JAVA_OPT="${JAVA_OPT} -Dapp.home=${BASE_DIR}"
+JAVA_OPT="${JAVA_OPT} -jar ${BASE_DIR}/boot/branch-workflow.jar"
+JAVA_OPT="${JAVA_OPT} ${JAVA_OPT_EXT}"
+JAVA_OPT="${JAVA_OPT} --spring.config.location=${CUSTOM_SEARCH_LOCATIONS}"
+
+if [ ! -d "${BASE_DIR}/logs" ]; then
+  mkdir ${BASE_DIR}/logs
 fi
 
-printf "$(date) ==== Starting ==== \n"
+echo "$JAVA ${JAVA_OPT}"
 
-ln $PATH_TO_JAR $SERVICE_NAME".jar"
-chmod a+x $SERVICE_NAME".jar"
-./$SERVICE_NAME".jar" start
-
-rc=$?;
-
-if [[ $rc != 0 ]];
-then
-    echo "$(date) Failed to start $SERVICE_NAME.jar, return code: $rc"
-    exit $rc;
-fi
-
-declare -i counter=0
-declare -i max_counter=48 # 48*5=240s
-declare -i total_time=0
-
-printf "Waiting for server startup"
-until [[ (( counter -ge max_counter )) || "$(curl -X GET --silent --connect-timeout 1 --max-time 2 --head $SERVER_URL | grep "HTTP")" != "" ]];
-do
-    printf "."
-    counter+=1
-    sleep 5
-
-    checkPidAlive
-done
-
-total_time=counter*5
-
-if [[ (( counter -ge max_counter )) ]];
-then
-    printf "\n$(date) Server failed to start in $total_time seconds!\n"
-    exit 1;
-fi
-
-printf "\n$(date) Server started in $total_time seconds!\n"
-
-exit 0;
+$JAVA ${JAVA_OPT}
